--- a/dia3/package.json
+++ b/dia3/package.json
@@ -1,7 +1,6 @@
 {
   "name": "dia3",
   "version": "1.0.0",
-  "description": "",
   "main": "ejemplos.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -11,5 +10,6 @@
   "license": "ISC",
   "dependencies": {
     "mongoose": "^6.3.8"
-  }
+  },
+  "description": ""
 }
